--- a/judge-studio/index.html
+++ b/judge-studio/index.html
@@ -13,12 +13,21 @@
         <p class="center">Thanks for taking a look at my project! Below are some important parts of my project -- to check them out, just click on the category name. The bar will expand with instructions on how to look at the category.</p>
         <ul class="collapsible popout">
             <li>
-                <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                <div class="collapsible-header"><i class="material-icons">code</i>Codebase</div>
+                <div class="collapsible-body">
+                    To view this project's codebase, click on the "Atom" icon on the menu bar. Here are some interesting places to go:
+                    <ul class="browser-default">
+                        <li><b>codebase/: </b>Contains tons of robot code: see README in folder for navigation.</li>
+                        <li><b>yolov2-movidius/: </b>Makefile for converting trained weights for use on Movidius Neural Compute Stick.</li>
+                        <li><b>server/: </b>Makefile for getting files for model training.</li>
+                    </ul>
+                    <br>
+                    Once you're done, <b>please switch back to this page by clicking on the lion icon (Brave Browser) in the menu bar!</b>
+                </div>
             </li>
             <li>
-                <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                <div class="collapsible-header"><i class="material-icons">book</i>Engineering Notebook</div>
+                <div class="collapsible-body">My best engineering notebook is really my git commit history. This can be viewed by going to Atom (click on the atom icon on the menu bar), and by typing Cmd + Shift + P, "Git Log", and hitting enter twice.</div>
             </li>
             <li>
                 <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
