--- a/judge-studio/index.html
+++ b/judge-studio/index.html
@@ -13,6 +13,12 @@
         <p class="center">Thanks for taking a look at my project! Below are some important parts of my project -- to check them out, just click on the category name. The bar will expand with instructions on how to look at the category.</p>
         <ul class="collapsible popout">
             <li>
+                <div class="collapsible-header"><i class="material-icons">videocam</i>Video</div>
+                <div class="collapsible-body">
+                    
+                </div>
+            </li>
+            <li>
                 <div class="collapsible-header"><i class="material-icons">code</i>Codebase</div>
                 <div class="collapsible-body">
                     To view this project's codebase, click on the "Atom" icon on the menu bar. Here are some interesting places to go:
@@ -27,11 +33,29 @@
             </li>
             <li>
                 <div class="collapsible-header"><i class="material-icons">book</i>Engineering Notebook</div>
-                <div class="collapsible-body">My best engineering notebook is really my git commit history. This can be viewed by going to Atom (click on the atom icon on the menu bar), and by typing Cmd + Shift + P, "Git Log", and hitting enter twice.</div>
+                <div class="collapsible-body">
+                    My best engineering notebook is really my git commit history. This can be viewed by going to Atom (click on the atom icon on the menu bar), and by typing Cmd + Shift + P, "Git Log", and hitting enter twice.
+                    <br>
+                    I have some more notes, especially for my object detection work, in Quiver notebooks. To view all of this, click on the Quiver icon in the menu bar. The ShockVision notebook contains some of my earlier work with object detection, and the Science Fair notebook contains science fair specific notes.
+                    <br><br>
+                    Once you're done, <b>please switch back to this page by clicking on the lion icon (Brave Browser) in the menu bar!</b>
+                </div>
             </li>
             <li>
-                <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                <div class="collapsible-header"><i class="material-icons">data_usage</i>Dataset</div>
+                <div class="collapsible-body">
+                    To view the image dataset, click on the VOC label in the menu bar, and use the next/prev image buttons to navigate between images. You may have to use the menu on the right to see all of the bounding boxes on an image.
+                    <br>
+                    Once you're done, <b>please switch back to this page by clicking on the lion icon (Brave Browser) in the menu bar!</b>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header"><i class="material-icons">360</i>CAD</div>
+                <div class="collapsible-body">
+                    To view the CAD for this project, click on the Fusion 360 icon in the menu bar.
+                    <br>
+                    Once you're done, <b>please switch back to this page by clicking on the lion icon (Brave Browser) in the menu bar!</b>
+                </div>
             </li>
         </ul>
     </div>
