Final fixes for judge studio

--- a/judge-studio/index.html
+++ b/judge-studio/index.html
@@ -13,12 +13,6 @@
         <p class="center">Thanks for taking a look at my project! Below are some important parts of my project -- to check them out, just click on the category name. The bar will expand with instructions on how to look at the category.</p>
         <ul class="collapsible popout">
             <li>
-                <div class="collapsible-header"><i class="material-icons">videocam</i>Video</div>
-                <div class="collapsible-body">
-                    
-                </div>
-            </li>
-            <li>
                 <div class="collapsible-header"><i class="material-icons">code</i>Codebase</div>
                 <div class="collapsible-body">
                     To view this project's codebase, click on the "Atom" icon on the menu bar. Here are some interesting places to go:
@@ -52,12 +46,34 @@
             <li>
                 <div class="collapsible-header"><i class="material-icons">360</i>CAD</div>
                 <div class="collapsible-body">
-                    To view the CAD for this project, click on the Fusion 360 icon in the menu bar.
+                    To view the CAD for this project, click on the Fusion 360 icon in the menu bar (orange F icon).
                     <br>
                     Once you're done, <b>please switch back to this page by clicking on the lion icon (Brave Browser) in the menu bar!</b>
                 </div>
             </li>
+            <li>
+                <div class="collapsible-header"><i class="material-icons">power</i>Electrical Diagram</div>
+                <div class="collapsible-body">
+                    To view the electrical diagram for this project, click on the Fritzing icon in the menu bar (red F icon).
+                    <br>
+                    Once you're done, <b>please switch back to this page by clicking on the lion icon (Brave Browser) in the menu bar!</b>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header"><i class="material-icons">show_chart</i>Program Flowchart</div>
+                <div class="collapsible-body">
+                    <p> Use two fingers to zoom in. The image may take a second to load.</p>
+                    <img src="assets/flow.png" style="width: 100%;">
+                </div>
+            </li>
         </ul>
+        <h4 class="center">Video</h4>
+        <br>
+        <center>
+            <video width="960" height="540" controls loop autoplay>
+                <source src="assets/ljfv3.mp4" type="video/mp4">
+            </video>
+        </center>
     </div>
 
     <script type="text/javascript" src="assets/materialize.min.js"></script>
