Added summary to judge studio

--- a/judge-studio/index.html
+++ b/judge-studio/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h3 class="center">Hello!</h3>
-        <p class="center">Thanks for taking a look at my project! Below are some important parts of my project -- to check them out, just click on the category name. The bar will expand with instructions on how to look at the category.</p>
+        <p class="center">Thanks for taking a look at LawnAI, a smart low-cost robot that uses an object detection neural network to find and cut out weeds! Below are some important parts of my project -- to check them out, just click on the category name. The bar will expand with instructions on how to look at the category.</p>
         <ul class="collapsible popout">
             <li>
                 <div class="collapsible-header"><i class="material-icons">code</i>Codebase</div>
